1.2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #9219: Added sql HAVING condition. Patch by Christian Michel.
- Fixed bug #9567: query->bindValue() sets value in query->boundParameters
- Fixed bug #9466: Oracle limit does not return $this.
- Fixed ezcQueryExpressionOracle, corrected processing subString() in Oracle.


1.2beta2 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added the ezcDatabase::getIdentifiers() method that returns a list of
  identifiers of the registered database instances.


1.2beta1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added the ezcDbHandler::quoteIdentifier() method that you can use to quote
  identifiers (such as table and column names) with.
- Added support for SQLite in-memory databases through the DSN:
  "sqlite://:memory" and the dbParams:
  "array( 'handler' => 'sqlite', 'port' => 'memory' );".
- Fixed bug #9159: No alias substitution for 'table.column' syntax.


1.1.4 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #9220: Wrong attribute used in ezcDbHandler::commit().
- Fixed bug #9221: ezcDbTransactionException::__construct() does not handle
  message argument correctly.


1.1.3 - Monday 09 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed handling queries like "SELECT 1+1" in Oracle.


1.1.2 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
	
- Fixed bug #8835: Documentation of lOr and lAnd.

	
1.1.1 - Monday 07 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8360: ezcQueryExpressionOracle::concat() calls non-existing
  method.
- Added ezcQuery::resetBinds() which allows you to reset the bound values and